# mkdocs-argref-plugin

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  test.yaml
argref/: __init__.py
mkdocs_argref_plugin/: __init__.py
src/argref/: main.py
tests/: test_parser.py  test_validation.py
