[project]
name = "mkdocs-argref-plugin"
description = "This plugin allows to configure your own autolink references for URLs."
authors = [
    { name = "Saurabh Kumar", email = "autolink-references-mkdocs-plugin@saurabh-kumar.com" },
    { name = "Richard Shadrach", email = "rhshadrach@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = ["mkdocs"]

keywords = [
    'autolinks',
    'mkdocs',
    'regex',
    'github',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Utilities',
]

[project.entry-points."mkdocs.plugins"]
"argref" = "argref:AutolinkReference"

[project.urls]
Documentation = "https://github.com/rhshadrach/mkdocs-argref-plugin/tree/main#readme"
Source = "https://github.com/rhshadrach/mkdocs-argref-plugin"
Tracker = "https://github.com/rhshadrach/mkdocs-argref-plugin/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest~=7.3.2",
    "ruff~=0.0.272",
    "hatch~=1.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/argref"]

[tool.hatch.version]
path = "src/argref/__about__.py"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "A",   # flake8-builtins
    # "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    # "D",   # pydocstyle
    "DOC", # pydoclint
    "E",   # pycodestyle - error
    "F",   # Pyflakes
    "FA",  # flake8-future-annotations
    # "FBT", # flake8-boolean-trap
    "G",   # flake8-logging-format
    "I",   # isort
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N",   # pep8-naming
    "PERF", # Perflint
    "PIE", # flake8-pie
    "PL",  # Pylint
    "Q",   # flake8-quotes
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "W",   # pycodestyle - warning
    "YTT", # flake8-2020
]
