[project]
name = "mkdocs-argref-plugin"
description = "MkDocs plugin to replace argumented refrences with markdown links."
authors = [
    { name = "Saurabh Kumar", email = "autolink-references-mkdocs-plugin@saurabh-kumar.com" },
    { name = "Richard Shadrach", email = "rhshadrach@gmail.com" },
]
keywords = [
    'autolinks',
    'mkdocs',
    'github',
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = ["mkdocs"]
classifiers=[
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Utilities',
]

[tool.setuptools.dynamic]
version = {file = "mkdocs_argref_plugin/VERSION"}

[project.entry-points."mkdocs.plugins"]
"argref" = "mkdocs_argref_plugin:AutolinkReference"

[project.urls]
Documentation = "https://github.com/rhshadrach/mkdocs-argref-plugin/tree/main#readme"
Source = "https://github.com/rhshadrach/mkdocs-argref-plugin"
Tracker = "https://github.com/rhshadrach/mkdocs-argref-plugin/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
lint = ["pre-commit"]
test = ["pytest"]
dev = ["mkdocs_argref_plugin[lint, test]"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "A",   # flake8-builtins
    # "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    # "D",   # pydocstyle
    "DOC", # pydoclint
    "E",   # pycodestyle - error
    "F",   # Pyflakes
    "FA",  # flake8-future-annotations
    # "FBT", # flake8-boolean-trap
    "G",   # flake8-logging-format
    "I",   # isort
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N",   # pep8-naming
    "PERF", # Perflint
    "PIE", # flake8-pie
    "PL",  # Pylint
    "Q",   # flake8-quotes
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "W",   # pycodestyle - warning
    "YTT", # flake8-2020
]
